<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="co.com.ing.hipotecas.HipotecaFormulario">

    <!--android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout-->

    <!--include layout="@layout/content_hipoteca_formulario" /-->

    <!--android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_dialog_email" /-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/menu_crear"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="56dp"
        android:background="?attr/colorPrimary" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HipotecaFormulario" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/label_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_nombre_hipoteca"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/label_nombre"
                android:ems="10" />

            <TextView
                android:id="@+id/label_situacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_situacion"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_below="@+id/nombre"
                android:layout_marginTop="10dp" />

            <Spinner
                android:id="@+id/situacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/label_situacion"
                android:ems="10"/>

            <TextView
                android:id="@+id/label_condiciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_condiciones"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_below="@+id/nombre"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/condiciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/label_condiciones"
                android:ems="10"
                android:inputType="textMultiLine">
            </EditText>

            <TextView
                android:id="@+id/label_contacto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_contacto"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_below="@+id/condiciones"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/contacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/label_contacto"
                android:ems="10">
            </EditText>

            <TextView
                android:id="@+id/label_telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_telefono"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_below="@+id/contacto"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/label_telefono"
                android:ems="10"
                android:inputType="phone" >
            </EditText>

            <TextView
                android:id="@+id/label_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/telefono"
                android:layout_marginTop="10dp"
                android:text="@string/label_email"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/label_email"
                android:ems="10"
                android:inputType="textEmailAddress"/>

            <TextView
                android:id="@+id/label_observaciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_observaciones"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_below="@+id/email"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/observaciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/label_observaciones"
                android:ems="10"
                android:inputType="textMultiLine">
            </EditText>
            <CheckBox
                android:id="@+id/pasivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/observaciones"
                android:layout_below="@+id/observaciones"
                android:layout_marginTop="20dp"
                android:text="@string/label_pasivo" />
            <LinearLayout
                android:id="@+id/botonera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/observaciones"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/boton_cancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/boton_cancelar" />

                <Button
                    android:id="@+id/boton_guardar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/boton_guardar" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
